Fix JVM memory OOM: use smaller JAVA_OPTS for ZK/BK/infra components
The previous commit increased JAVA_OPTS heap to 256m + direct 128m (384MB)
but ZK/BK containers still had 256Mi limits. This caused OOM kills,
breaking BookKeeper (BKNotEnoughBookiesException) and causing 300s
timeouts on CREATE TABLE.

Fix: use separate INFRA_JAVA_OPTS (128m heap, 64m direct) for ZooKeeper,
BookKeeper, file servers, and indexing services. Only the HerdDB server
uses the larger SERVER_JAVA_OPTS. Also improved waitForTablespace to
query systables instead of SELECT 1 for a more reliable readiness check.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>