@@ -69,8 +69,11 @@ public class HerdDBFileServerKubernetesIT {
     private static final String IMAGE_NAME = "herddb/herddb-server";
     private static final String IMAGE_TAG = "0.30.0-SNAPSHOT";
     private static final String FULL_IMAGE = IMAGE_NAME + ":" + IMAGE_TAG;
-    private static final String JAVA_OPTS = "-XX:+UseG1GC -Duser.language=en -Xmx256m -Xms256m"
+    private static final String SERVER_JAVA_OPTS = "-XX:+UseG1GC -Duser.language=en -Xmx256m -Xms256m"
             + " -Djava.net.preferIPv4Stack=true -XX:MaxDirectMemorySize=128m"
+            + " -Djava.awt.headless=true --add-modules jdk.incubator.vector";
+    private static final String INFRA_JAVA_OPTS = "-XX:+UseG1GC -Duser.language=en -Xmx128m -Xms128m"
+            + " -Djava.net.preferIPv4Stack=true -XX:MaxDirectMemorySize=64m"
             + " -Djava.awt.headless=true --add-modules jdk.incubator.vector";
 
     @ClassRule
@@ -138,7 +141,7 @@ public class HerdDBFileServerKubernetesIT {
         values.put("image.pullPolicy", "Never");
         // ZooKeeper
         values.put("zookeeper.enabled", "true");
-        values.put("zookeeper.javaOpts", JAVA_OPTS);
+        values.put("zookeeper.javaOpts", INFRA_JAVA_OPTS);
         values.put("zookeeper.resources.requests.memory", "256Mi");
         values.put("zookeeper.resources.requests.cpu", "0.5");
         values.put("zookeeper.resources.limits.memory", "256Mi");
@@ -147,7 +150,7 @@ public class HerdDBFileServerKubernetesIT {
         // BookKeeper
         values.put("bookkeeper.enabled", "true");
         values.put("bookkeeper.replicaCount", "1");
-        values.put("bookkeeper.javaOpts", JAVA_OPTS);
+        values.put("bookkeeper.javaOpts", INFRA_JAVA_OPTS);
         values.put("bookkeeper.resources.requests.memory", "256Mi");
         values.put("bookkeeper.resources.requests.cpu", "0.5");
         values.put("bookkeeper.resources.limits.memory", "256Mi");
@@ -157,7 +160,7 @@ public class HerdDBFileServerKubernetesIT {
         // File Server: 2 replicas with S3 backend
         values.put("fileServer.replicaCount", "2");
         values.put("fileServer.storageMode", "s3");
-        values.put("fileServer.javaOpts", JAVA_OPTS);
+        values.put("fileServer.javaOpts", INFRA_JAVA_OPTS);
         values.put("fileServer.resources.requests.memory", "256Mi");
         values.put("fileServer.resources.requests.cpu", "0.5");
         values.put("fileServer.resources.limits.memory", "256Mi");
@@ -171,7 +174,7 @@ public class HerdDBFileServerKubernetesIT {
         values.put("minio.resources.limits.cpu", "0.5");
         values.put("minio.storage.size", "1Gi");
         // Server resources
-        values.put("server.javaOpts", JAVA_OPTS);
+        values.put("server.javaOpts", SERVER_JAVA_OPTS);
         values.put("server.resources.requests.memory", "512Mi");
         values.put("server.resources.requests.cpu", "0.5");
         values.put("server.resources.limits.memory", "512Mi");
